# grpc-python-test

./: .gitignore  README.md
grpc_service/docker_compose/: docker-compose.yml
grpc_service/graph/: Dockerfile  pyproject.toml  schema.py  todo_pb2.pyi
grpc_service/to_do/: Dockerfile  client.py  pyproject.toml  service.py  todo.proto  todo_pb2.py  todo_pb2_grpc.py  user_pb2_grpc.py
grpc_service/user_service/: client.py  pyproject.toml  service.py  user.proto  user_pb2.py  user_pb2.pyi
